<resources>
    <string name="app_name">MovieShow</string>
    <string name="password">Senha</string>
    <string name="email">email</string>
    <string name="login">Fazer login</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="cadastro">CADASTRO</string>
    <string name="register">REGISTER</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="registrar">Não possui uma conta? Cadastre-se</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>

    <string name="generic_error">Não foi possivel realizar o login</string>
    <string name="recuperar_senha">RECUPERAR SENHA</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="login1">LOGIN</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sair">Sair</string>

    <string name="iv_cd_star_01">Primeira estrela da avaliação</string>
    <string name="iv_cd_star_02">Segunda estrela da avaliação</string>
    <string name="iv_cd_star_03">Terceira estrela da avaliação</string>
    <string name="iv_cd_star_04">Quarta estrela da avaliação</string>
    <string name="iv_cd_star_05">Quinta estrela da avaliação</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>