<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <data>
        <import type="android.view.View"/>
        <variable
            name="fragment"
            type="br.com.movieshow.fragment.LoginFragment" />

        <variable
            name="viewmodel"
            type="br.com.movieshow.viewmodel.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hapticFeedbackEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/etNome"
        app:layout_constraintTop_toBottomOf="@+id/etNome">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="44dp"
            android:layout_height="16dp"
            android:layout_marginStart="183dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="184dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btLogin"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="266dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:onClick="@{() -> viewmodel.login()}"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textSize="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.203" />

        <TextView
            android:id="@+id/btRegistrar"
            android:layout_width="232dp"
            android:layout_height="22dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="68dp"
            android:onClick="@{fragment::cadastro}"
            android:text="@string/registrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btLogin"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/btForgotPassword"
            android:layout_width="161dp"
            android:layout_height="26dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{fragment::forgotPassword}"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="113dp"
            android:layout_height="107dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fallbackLineSpacing="true"
            android:hint="@string/password"
            android:inputType="textWebPassword"
            android:text="@={viewmodel.password}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNome" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:fallbackLineSpacing="true"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress"
            android:text="@={viewmodel.email}"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="93dp"
            android:layout_height="39dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:includeFontPadding="false"
            android:text="@string/login1"
            android:textColor="#9E1B1B"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.445" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>